--- a/src/pages/ReviewPage.css
+++ b/src/pages/ReviewPage.css
@@ -68,3 +68,10 @@ form {
 	padding-top: 15px;
 	padding-bottom: 12px;
 }
+
+h4 {
+	text-align: center;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	color: darkslategrey;
+}
