pointless style stuff messed with

--- a/src/pages/ReviewPage.css
+++ b/src/pages/ReviewPage.css
@@ -1,10 +1,6 @@
 /* DEFINE SOME ANIMATIONS */
+
 @keyframes colorChange {
-	to {
-		background: darkblue;
-	}
-}
-@keyframes sizeChange {
 	to {
 		/* width: 4.5rem; */
 		background: yellow;
@@ -15,28 +11,38 @@
 form {
 	--timer1: 0.3s;
 	--timer2: 0.15s;
+	--delay: 1s;
 }
 
 /* ANIMATION WHEN STARTING THE PAGE */
 #face5 {
-	animation: sizeChange var(--timer1) ease 0s 2 alternate,
-		sizeChange var(--timer1) ease calc(14 * var(--timer2)) 2 alternate;
+	animation: colorChange var(--timer1) ease var(--delay) 2 alternate,
+		colorChange var(--timer1) ease calc(var(--delay) + 13 * var(--timer2)) 2
+			alternate;
 }
 #face4 {
-	animation: sizeChange var(--timer1) ease calc(1 * var(--timer2)) 2 alternate,
-		sizeChange var(--timer1) ease calc(13 * var(--timer2)) 2 alternate;
+	animation: colorChange var(--timer1) ease
+			calc(var(--delay) + 1 * var(--timer2)) 2 alternate,
+		colorChange var(--timer1) ease calc(var(--delay) + 12 * var(--timer2)) 2
+			alternate;
 }
 #face3 {
-	animation: sizeChange var(--timer1) ease calc(2 * var(--timer2)) 2 alternate,
-		sizeChange var(--timer1) ease calc(12 * var(--timer2)) 2 alternate;
+	animation: colorChange var(--timer1) ease
+			calc(var(--delay) + 2 * var(--timer2)) 2 alternate,
+		colorChange var(--timer1) ease calc(var(--delay) + 11 * var(--timer2)) 2
+			alternate;
 }
 #face2 {
-	animation: sizeChange var(--timer1) ease calc(3 * var(--timer2)) 2 alternate,
-		sizeChange var(--timer1) ease calc(11 * var(--timer2)) 2 alternate;
+	animation: colorChange var(--timer1) ease
+			calc(var(--delay) + 3 * var(--timer2)) 2 alternate,
+		colorChange var(--timer1) ease calc(var(--delay) + 10 * var(--timer2)) 2
+			alternate;
 }
 #face1 {
-	animation: sizeChange var(--timer1) ease calc(4 * var(--timer2)) 2 alternate,
-		sizeChange var(--timer1) ease calc(10 * var(--timer2)) 2 alternate;
+	animation: colorChange var(--timer1) ease
+			calc(var(--delay) + 4 * var(--timer2)) 2 alternate,
+		colorChange var(--timer1) ease calc(var(--delay) + 9 * var(--timer2)) 2
+			alternate;
 }
 
 /* IMAGE STYLES */
