--- a/src/pages/ReviewPage.css
+++ b/src/pages/ReviewPage.css
@@ -88,6 +88,7 @@ a:hover {
 	display: grid;
 	grid-template-columns: 1fr 1rem 6fr 1rem 1fr;
 	background: white;
+	margin-bottom: 150px;
 }
 
 .logos2 {
