--- a/src/pages/ReviewPage.css
+++ b/src/pages/ReviewPage.css
@@ -135,15 +135,28 @@ a:hover {
 }
 
 #logo1 {
-	height: 90px;
+	height: 110px;
 }
 
 #logo2 {
-	height: 90px;
+	height: 110px;
 }
 
 #logo3 {
-	height: 90px;
+	height: 110px;
+}
+
+@media (max-width: 1250px) {
+	#logo1 {
+		height: 80px;
+	}
+
+	#logo2 {
+		height: 80px;
+	}
+	#logo3 {
+		height: 80px;
+	}
 }
 
 @media (max-width: 1000px) {
